--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -16,7 +16,7 @@
         }
         else
         {
-            <img src="~/img/default_avatar.jpg" class="rounded-circle" style="display:inline-block; height:25px; width:25px; margin: auto;" alt="Avatar" loading="lazy" />
+            <img src="~/img/default_avatar.jpg" class="rounded-circle" style="display:inline-block; height:25px; width:25px; margin: auto; object-fit:cover;" alt="Avatar"/>
         }
         @User.Identity.Name
     </a>
