--- a/Views/Account/Avatar.cshtml
+++ b/Views/Account/Avatar.cshtml
@@ -48,7 +48,7 @@
                             <div class="btn-group mr-2 mt-3" role="group">
                                 <button id="uploadButton" type="submit" class="btn btn-success disabled">Upload avatar</button>
                                 <a asp-controller="account" asp-action="removeimage" asp-route-type="@UserProfileImagesTypes.Avatar" class="@buttonRemoveAvatarClass" role="button" aria-disabled="true">Remove avatar</a>
-                                <a asp-controller="account" asp-action="edit" class="btn btn-warning" role="button">Back</a>
+                                <a asp-controller="account" asp-action="profile" asp-route-name="@User.Identity.Name" class="btn btn-warning" role="button">Back</a>
                             </div>
                         </div>
                     </form>
