replace method of some http requests, add wavtomp3 method

--- a/Views/Exceptions/CustomException.cshtml
+++ b/Views/Exceptions/CustomException.cshtml
@@ -11,7 +11,7 @@
             </div>
             <div class="card-body">
                 <h6>@TempData["Message"]</h6>
-                <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Go to home</a>
+                <partial name="_ButtonsForExceptionsPartial"/>
             </div>
         </div>
     </div>
