--- a/Views/Exceptions/Forbidden.cshtml
+++ b/Views/Exceptions/Forbidden.cshtml
@@ -11,6 +11,7 @@
             <div class="card-body">
                 <h2 class="text-danger">403</h2>
                 <h6>@Message.Code16</h6>
+                <partial name="_ButtonsForExceptionsPartial"/>
             </div>
         </div>
     </div>
