--- a/Views/Link/EditMinutes.cshtml
+++ b/Views/Link/EditMinutes.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Edit expire time of unique link";
     Layout = "_Layout";
 }
-@model UniqueLinkMinutesDto
+@model LinkMinutesDto
 
 <div class="row" style="margin-top:10vh;">
     <div class="d-flex justify-content-center">
