--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -13,7 +13,10 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" asp-controller="link" asp-action="uniquelinkpanel">Unique link panel</a>
+                    <a class="dropdown-item" asp-controller="link" asp-action="linkpanel">Link panel</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" asp-controller="library" asp-action="alltracks">All tracks</a>
                 </li>
             </ul>
         </li>
