--- a/Views/Exceptions/InternalServerError.cshtml
+++ b/Views/Exceptions/InternalServerError.cshtml
@@ -11,6 +11,7 @@
             <div class="card-body">
                 <h2 class="text-danger">500</h2>
                 <h6>Internal Server Error.</h6>
+                <partial name="_ButtonsForExceptionsPartial"/>
             </div>
         </div>
     </div>
