--- a/Views/Exceptions/NotFoundPage.cshtml
+++ b/Views/Exceptions/NotFoundPage.cshtml
@@ -12,7 +12,7 @@
             <div class="card-body">
                 <h2 class="text-danger">400</h2>
                 <h6>@Message.Code29</h6>
-                <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Go to home</a>
+                <partial name="_ButtonsForExceptionsPartial"/>
             </div>
         </div>
     </div>
