--- a/Views/Link/LinkPanel.cshtml
+++ b/Views/Link/LinkPanel.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Unique link panel";
+    ViewData["Title"] = "Link panel";
     Layout = "_Layout";
     string textColor = String.Empty;
     var urlActionContext = Url.ActionContext;
@@ -8,7 +8,6 @@
     var controllerName = urlActionContext.RouteData.Values["controller"].ToString().ToLower();
 }
 @model PaginetedList<Link>
-
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-3">
         <form method="get" asp-controller="@controllerName" asp-action="@acionName" autocomplete="off">
@@ -16,10 +15,12 @@
                 <input type="text" name="search" class="form-control" placeholder="search">
                 <div class="input-group-prepend">
                     <button class="btn btn-success" type="submit">Search</button>
-                    <a asp-controller="@controllerName" asp-action="@acionName" class="btn btn-warning">Clear</a>
-                    <a asp-controller="admin" asp-action="createuser" class="btn btn-success">Create user</a>
+                     <a asp-controller="@controllerName" asp-action="@acionName" class="btn btn-warning">Clear</a>
                 </div>
             </div>
+        </form>
+        <form method="post" asp-controller="admin" asp-action="createuser">
+            <button class="btn btn-success" type="submit">Create User</button>
         </form>
     </div>
 </div>
@@ -33,8 +34,6 @@
                     <th scope="col">Guid</th>
                     <th scope="col">DateTimeExpire</th>
                     <th scope="col">Minutes</th>
-                    <th scope="col">Type</th>
-                    <th scope="col">Author Id</th>
                     <th scope="col">Author Name</th>
                     <th scope="col">Action</th>
                     <th scope="col"></th>
@@ -59,11 +58,11 @@
                     <th class="text-warning" scope="row">@link.Guid</th>
                     <td class="@colorDateTimeExpire">@link.DateTimeExpire</td>
                     <td class="text-info">@link.Minutes</td>
-                    <th class="text-warning" scope="row">@link.Type</th>
-                    <th class="text-info" scope="row">@link.User.Id</th>
-                    <th style="color:@link.User.Color" scope="row">@link.User.Name</th>
-                    <td><a asp-controller="link" asp-action="deleteurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-danger btn-sm">Delete</a></td>
-                    <td><a asp-controller="link" asp-action="refreshurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex" class="btn btn-warning btn-sm">Refresh</a></td>
+                    <td><a style="text-decoration: none;" asp-controller="account" asp-action="profile" asp-route-name="@link.User.Name" class="btn btn-link btn-sm">@link.User.Name</a></td>
+
+                    <td><form method="post" asp-controller="link" asp-action="deleteurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex"> <button type="submit" class="btn btn-danger btn-sm">Delete</button></form></td>
+                    <td><form method="post" asp-controller="link" asp-action="refreshurl" asp-route-guid="@link.Guid" asp-route-pNumber="@Model.PageIndex"> <button type="submit" class="btn btn-danger btn-sm">Refresh</button></form></td>
+
                     <td><a asp-controller="link" asp-action="shareurl" asp-route-guid="@link.Guid" class="btn btn-success btn-sm">Copy link</a></td>
                     <td><a asp-controller="link" asp-action="editminutes" asp-route-guid="@link.Guid" class="btn btn-warning btn-sm">Set minutes</a></td>
                 </tr>
