--- a/Views/Account/Avatar.cshtml
+++ b/Views/Account/Avatar.cshtml
@@ -5,12 +5,11 @@
 
     var isAvatarUploaded = bool.Parse(User.FindFirst(x => x.Type == "IsAvatarUploaded").Value);
 
-    string urlAvatar = string.Empty;
+    var urlAvatar = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamimage","account",new {name=User.Identity.Name, type=UserProfileImagesTypes.Avatar})}";
     string buttonRemoveAvatarClass = string.Empty;
-
+    //TODO zrob tu posty
     if (isAvatarUploaded)
     {
-        urlAvatar = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamavatar","account",new {name=User.FindFirst(x => x.Type == ClaimTypes.Name).Value, type=UserProfileImagesTypes.Avatar})}";
         buttonRemoveAvatarClass = "btn btn-danger mx-2";
     }
     else
@@ -31,22 +30,14 @@
                         <div class="validation text-danger" style="text-decoration: none !important;" asp-validation-summary="All"></div>
                         <div class="form-group mt-1 col-12 text-center">
                             <label for="avatar-upload" id="imgstoreavatar">
-                                @if (isAvatarUploaded)
-                                {
-                                    <img class="rounded-circle" src="@urlAvatar" alt="Avatar Profile" style="width:120px; height:120px; cursor: pointer;">
-                                }
-                                else
-                                {
-                                    <img class="rounded-circle" src="~/img/default_avatar.jpg" alt="Avatar Profile" style="width:120px; height:120px; cursor: pointer;">
-                                }
-
+                                <img class="rounded-circle" src="@urlAvatar" alt="Avatar Profile" style="width:120px; height:120px; cursor: pointer;">
                             </label>
                             <input asp-for="Image" id="avatar-upload" class="form-control" type="file" style="visibility:hidden; width:0; height:0;" accept=".png, .jpg, .jpeg">
                         </div>
                         <div class="col-12 text-center">
                             <div class="btn-group mr-2 mt-3" role="group">
                                 <button id="uploadButton" type="submit" class="btn btn-success disabled">Upload avatar</button>
-                                <a asp-controller="account" asp-action="removeimage" asp-route-type="@UserProfileImagesTypes.Avatar" class="@buttonRemoveAvatarClass" role="button" aria-disabled="true">Remove avatar</a>
+                                <a asp-controller="account" asp-action="removeimage" asp-route-type="@UserProfileImagesTypes.Avatar" class="@buttonRemoveAvatarClass" role="button" aria-disabled="true">Remove</a>
                                 <a asp-controller="account" asp-action="profile" asp-route-name="@User.Identity.Name" class="btn btn-warning" role="button">Back</a>
                             </div>
                         </div>
