--- a/Views/Account/Header.cshtml
+++ b/Views/Account/Header.cshtml
@@ -5,12 +5,11 @@
 
     var isHeaderUploaded = bool.Parse(User.FindFirst(x => x.Type == "IsHeaderUploaded").Value);
 
-    string urlHeader = string.Empty;
+    string urlHeader = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamimage","account",new {name=User.Identity.Name, type=UserProfileImagesTypes.Header})}";
     string buttonRemoveHeaderClass = string.Empty;
 
     if (isHeaderUploaded)
     {
-        urlHeader = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamavatar","account",new {name=User.FindFirst(x => x.Type == ClaimTypes.Name).Value, type=UserProfileImagesTypes.Header})}";
         buttonRemoveHeaderClass = "btn btn-danger mx-2";
     }
     else
@@ -30,24 +29,14 @@
                         <div class="validation text-danger" style="text-decoration: none !important;" asp-validation-summary="All"></div>
                         <div class="form-group mt-1 col-12 text-center">
                             <label for="header-upload" id="imgstoreheader">
-                                @if (isHeaderUploaded)
-                                {
-                                    <img src="@urlHeader" alt="Avatar Profile" style="width: 100%; height: 100%; aspect-ratio: 6; object-fit: cover; cursor: pointer;">
-                                }
-                                else
-                                {
-                                    <div style="cursor: pointer;">
-                                        Click to select header
-                                    </div> 
-                                }
-
+                                <img src="@urlHeader" alt="Avatar Profile" style="width: 100%; height: 100%; aspect-ratio: 6; object-fit: cover; cursor: pointer;">
                             </label>
                             <input asp-for="Image" id="header-upload" class="form-control" type="file" style="visibility:hidden; width:0; height:0;" accept=".png, .jpg, .jpeg">
                         </div>
                         <div class="col-12 text-center">
                             <div class="btn-group mr-2 mt-3" role="group">
-                                <button id="uploadButton" type="submit" class="btn btn-success disabled">Upload header</button>
-                                <a asp-controller="account" asp-action="removeimage" asp-route-type="@UserProfileImagesTypes.Header" class="@buttonRemoveHeaderClass" role="button">Remove header</a>
+                                <button id="uploadButton" type="submit" class="btn btn-success disabled">Upload</button>
+                                <a asp-controller="account" asp-action="removeimage" asp-route-type="@UserProfileImagesTypes.Header" class="@buttonRemoveHeaderClass" role="button">Remove</a>
                                 <a asp-controller="account" asp-action="profile" asp-route-name="@User.Identity.Name" class="btn btn-warning" role="button">Back</a>
                             </div>
                         </div>
