--- a/Views/Account/Avatar.cshtml
+++ b/Views/Account/Avatar.cshtml
@@ -4,19 +4,37 @@
     Layout = "_layout";
 
     var isAvatarUploaded = bool.Parse(User.FindFirst(x => x.Type == "IsAvatarUploaded").Value);
-
     var urlAvatar = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamimage","account",new {name=User.Identity.Name, type=UserProfileImagesTypes.Avatar})}";
-    string buttonRemoveAvatarClass = string.Empty;
-    //TODO zrob tu posty
-    if (isAvatarUploaded)
-    {
-        buttonRemoveAvatarClass = "btn btn-danger mx-2";
-    }
-    else
-    {
-        buttonRemoveAvatarClass = "btn btn-danger mx-2 disabled";
-    }
+
 }
+
+@if (isAvatarUploaded)
+{
+    <div class="modal fade" id="removeAvatarModal" tabindex="-1" role="dialog" aria-labelledby="removeAvatarModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="removeAvatarModalLabel">Remove avatar</h5>
+                    <button type="button" class="close close-btn" data-bs-dismiss="modal" aria-label="Close"><span class="" aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group mb-3">
+                        <span>Are you sure you want to remove avatar ?</span>
+                    </div>
+                    <form method="post" asp-action="removeimage" asp-controller="account" asp-route-type="@UserProfileImagesTypes.Avatar">
+                        <div class="form-group mt-3 text-center">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
+                            <button type="submit" class="btn btn-danger">Remove</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+
+
 <div class="row mt-5">
     <div class="d-flex justify-content-center">
         <div class="card formBox"> 
@@ -37,7 +55,10 @@
                         <div class="col-12 text-center">
                             <div class="btn-group mr-2 mt-3" role="group">
                                 <button id="uploadButton" type="submit" class="btn btn-success disabled">Upload avatar</button>
-                                <a asp-controller="account" asp-action="removeimage" asp-route-type="@UserProfileImagesTypes.Avatar" class="@buttonRemoveAvatarClass" role="button" aria-disabled="true">Remove</a>
+                                @if (isAvatarUploaded)
+                                {
+                                    <button type="button" data-bs-toggle="modal" data-bs-target="#removeAvatarModal" class="btn btn-danger btn-sm">Remove</button>
+                                }
                                 <a asp-controller="account" asp-action="profile" asp-route-name="@User.Identity.Name" class="btn btn-warning" role="button">Back</a>
                             </div>
                         </div>
