--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -15,7 +15,7 @@
     var urlProfile = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("profile","account",new {name=Model.Name})}";
 } 
 
-<div class="row" style="background-image: url(@urlHeader); background-size: auto; background-repeat: no-repeat; background-position: center;">
+<div class="row profileHeader" style="background-image: url(@urlHeader); background-size: 100% 100%; background-repeat: no-repeat; background-position: center;">
     <div class="col-md-2 col-12 p-5 text-center">
         <div style="object-fit:cover;">
             <img class="rounded-circle" src="@urlAvatar" alt="Avatar Profile" style="width:120px; height:120px;">
