--- a/Views/Account/ChangeColor.cshtml
+++ b/Views/Account/ChangeColor.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Change Color";
+    ViewData["Title"] = PageTitle.PageTitle07;
     Layout = "_Layout";
 }
 @model ChangeColorDto
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-center">
         <div class="card formBox">
             <div class="card-header">
-                <h5>Change password</h5>
+                <h5>Change color</h5>
             </div>
             <div class="card-body">
                 <form asp-controller="account" asp-action="changecolor">
