--- a/Views/Account/ChangePassword.cshtml
+++ b/Views/Account/ChangePassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = PageTitle.PageTitle08;
     Layout = "_Layout";
 }
 @model ChangePasswordDto
