--- a/Views/Account/ChangeTheme.cshtml
+++ b/Views/Account/ChangeTheme.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Change theme";
+    ViewData["Title"] = PageTitle.PageTitle09;
     Layout = "_Layout";
 }
 @model ChangeThemeDto
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-center">
         <div class="card formBox">
             <div class="card-header">
-                <h5>Change password</h5>
+                <h5>Change theme</h5>
             </div>
             <div class="card-body">
                 <form asp-controller="account" asp-action="changetheme">
