--- a/Views/Account/UserSettings.cshtml
+++ b/Views/Account/UserSettings.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Settings";
+    ViewData["Title"] = PageTitle.PageTitle14;
     Layout = "_layout";
 }
 <div class="row mt-5">
