--- a/Views/Admin/Logs.cshtml
+++ b/Views/Admin/Logs.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "All Logs";
+    ViewData["Title"] = PageTitle.PageTitle16;
     Layout = "_Layout";
     var urlActionContext = Url.ActionContext;
     var urlQuery = urlActionContext.HttpContext.Request;
