--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Users panel";
+    ViewData["Title"] = PageTitle.PageTitle17;
     Layout = "_Layout";
     var urlActionContext = Url.ActionContext;
     var urlQuery = urlActionContext.HttpContext.Request;
