--- a/Views/Exceptions/BadRequestPage.cshtml
+++ b/Views/Exceptions/BadRequestPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "400 Bad Request";
+    ViewData["Title"] = PageTitle.PageTitle01;
     Layout = "_SimpleLayout";
 }
 <div class="row mt-5">
