--- a/Views/Exceptions/Forbidden.cshtml
+++ b/Views/Exceptions/Forbidden.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "403 Forbidden";
+    ViewData["Title"] = PageTitle.PageTitle03;
     Layout = "_SimpleLayout";
 }
 <div class="row mt-5">
