--- a/Views/Exceptions/InternalServerError.cshtml
+++ b/Views/Exceptions/InternalServerError.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "500 Internal Server Error";
+    ViewData["Title"] = PageTitle.PageTitle04;
     Layout = "_SimpleLayout";
 }
 <div class="row mt-5">
