--- a/Views/Link/EditMinutes.cshtml
+++ b/Views/Link/EditMinutes.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Edit expire time of unique link";
+    ViewData["Title"] = PageTitle.PageTitle22;
     Layout = "_Layout";
 }
 @model LinkMinutesDto
