--- a/Views/Link/LinkPanel.cshtml
+++ b/Views/Link/LinkPanel.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Link panel";
+    ViewData["Title"] = PageTitle.PageTitle23;
     Layout = "_Layout";
     string textColor = String.Empty;
     var urlActionContext = Url.ActionContext;
