--- a/Views/Link/ShareUrl.cshtml
+++ b/Views/Link/ShareUrl.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Share url";
+    ViewData["Title"] = PageTitle.PageTitle24;
     Layout = "_Layout";
 }
 @model string
