--- a/Views/Account/Create.cshtml
+++ b/Views/Account/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Create account";
+    ViewData["Title"] = PageTitle.PageTitle10;
     Layout = "_SimpleLayout";
 }
 @model CreateUserDto
