--- a/Views/Account/UserLog.cshtml
+++ b/Views/Account/UserLog.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Logs";
+    ViewData["Title"] = PageTitle.PageTitle13;
     Layout = "_Layout";
     var urlActionContext = Url.ActionContext;
     var urlQuery = urlActionContext.HttpContext.Request;
