--- a/Views/Admin/EditUser.cshtml
+++ b/Views/Admin/EditUser.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SettingsUserDto
 @{
-    ViewData["Title"] = "Edit " + Model.Name;
+    ViewData["Title"] = PageTitle.PageTitle15(Model.Name);
     Layout = "_Layout";
 }
 
