--- a/Views/Exceptions/NotFoundPage.cshtml
+++ b/Views/Exceptions/NotFoundPage.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "404 Not Found";
+    ViewData["Title"] = PageTitle.PageTitle05;
     Layout = "_SimpleLayout";
-    //TODO replace in exceptions messages with class Message
 }
 <div class="row mt-5">
     <div class="d-flex justify-content-center">
