--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -85,3 +85,12 @@
     -ms-user-select: none;
     user-select: none;
 }
+.home-item1 {
+    border: 1px solid #202227;
+    opacity: 0.5;
+}
+
+.home-item1 a:hover {
+    border: 1px solid #495a6c;
+    opacity: 1.0;
+}
