fix bools IsAvatarUplaoded and IsHeaderUploaded

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -121,7 +121,7 @@
             foreach (var item in Model.Tracks)
             {
                 
-                <div class="col-md-2 col-6 p-3 home-item1">
+                <div class="col-md-2 col-6 p-3 icon-item">
                     <div class="row">
                         <div class="col-12 text-center">
                             <a asp-action="track" asp-controller="library" asp-route-guid="@item.Guid" style="text-decoration: none;">
