add list tracks of album

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -125,7 +125,7 @@
                 <div class="col-md-2 col-6 p-3 icon-item">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <a asp-action="track" asp-controller="library" asp-route-guid="@item.Guid" style="text-decoration: none;">
+                            <a asp-action="album" asp-controller="library" asp-route-guid="@item.Guid" style="text-decoration: none;">
                                 <h1><i class="bi bi-folder"></i></h1>
                                 <span class="mt-0 align-text-top">@item.Name</span>
                             </a>
